--- a/HTML/converter.html
+++ b/HTML/converter.html
@@ -3,18 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>converter</title>
+    <link rel="stylesheet" href="/CSS/style_login.css">
+    <title>convertor</title>
 </head>
 <body>
-    <center>
-        <div class="container">
-            <h1>Currency Converter</h1>
-            <div>
-                <label for="first">Amount: </label>
-                <input type="number" id="amount" name="first" min="0">
-                <select name="cars" id="first"></select>
-            </div>
+    <div class="container">
+        <h1>Currency convertor</h1>
+        <div>
+            <label for="first">Amount</label>
+            <input type="number" name="first" id="amount" min = "0">
+            <select name="cars" id="first">
+    
+            </select>
         </div>
-    </center>
+        <div>
+            <label for="second">convert</label>
+            <input type="text" name="second" id = "other_currency"  disabled>
+            <select name="cars" id="second">
+            
+            </select>
+        </div>
+        <button onclick="convert()">convert</button>
+    </div>
+    <script src="/JS/login_script.js"></script>
 </body>
 </html>
